--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "http-server ./html/",
+    "start": "http-server ./ -c-1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
